--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ php:
   - 5.5
   - 5.4
   - hhvm
+  
+before_script:
+  - curl -s http://getcomposer.org/installer | php
+  - composer install -n --prefer-source
